[package]
name = "arx"
version = "0.1.0"
edition = "2021"
authors = ["Vladislav Mamon <hello@vm.codes>"]
description = "Simple and user-friendly command-line tool for declarative scaffolding."
repository = "https://github.com/norskeld/arx"
publish = false

[dependencies]
base32 = "0.4.0"
chrono = "0.4.35"
clap = { version = "4.4.11", features = ["cargo", "derive"] }
crossterm = "0.27.0"
flate2 = { version = "1.0.28" }
git2 = { version = "0.18.1", features = ["vendored-libgit2"] }
glob-match = { version = "0.2.1" }
home = "0.5.9"
indicatif = "0.17.8"
inquire = { version = "0.7.0", features = ["editor"] }
kdl = "=4.6.0"
miette = { version = "=5.10.0", features = ["fancy"] }
reqwest = { version = "0.11.22", features = ["json"] }
run_script = { version = "0.10.1" }
serde = { version = "1.0.197", features = ["derive"] }
tar = { version = "0.4.40" }
thiserror = { version = "1.0.51" }
tokio = { version = "1.35.0", features = ["macros", "fs", "rt-multi-thread"] }
toml = "0.8.11"
unindent = "0.2.3"
walkdir = { version = "2.4.0" }

[profile.release]
lto = "thin"
panic = "abort"
opt-level = "s"
